src/objects/OAuthService__c.object
<CustomObject>
    <fields>
        <fullName>Access_Token_URL__c</fullName>
        <label>Access Token URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Authorization_Type__c</fullName>
        <label>Authorization Type</label>
        <picklist>
            <picklistValues>
                <fullName>Request Header (Authorization: Bearer)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Request Header (Authorization: OAuth)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>URI Query Parameter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Authorization_URL__c</fullName>
        <label>Authorization URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Auto_import__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked then the import will run every day into the enddate</inlineHelpText>
        <label>Auto import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bar_color__c</fullName>
        <defaultValue>&quot;#222,#666,#ccc&quot;</defaultValue>
        <inlineHelpText>This is color to be us in Charts to representation of different data in the performance veiw</inlineHelpText>
        <label>Bar colors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Id__c</fullName>
        <label>Campaign ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Key__c</fullName>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Secret__c</fullName>
        <label>Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <defaultValue>Today() + 365</defaultValue>
        <inlineHelpText>After this date will Musqot not collect data from this social media connection.</inlineHelpText>
        <label>End date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Page_Id__c</fullName>
        <inlineHelpText>This is to watch a page or webpage. Used in Facebook, Google</inlineHelpText>
        <label>Page ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_ID__c</fullName>
        <inlineHelpText>This is used for watch a Post in Facebook</inlineHelpText>
        <label>Post ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirect_URL__c</fullName>
        <inlineHelpText>this url is used for create url in the ad incl the ID</inlineHelpText>
        <label>Redirect URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Request_Token_URL__c</fullName>
        <label>Request Token URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Response_Type__c</fullName>
        <label>Response Type</label>
        <picklist>
            <picklistValues>
                <fullName>code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>token</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Method__c</fullName>
        <label>Signature Method</label>
        <picklist>
            <picklistValues>
                <fullName>HMAC-SHA1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PLAINTEXT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Social_media__c</fullName>
        <label>Social media</label>
        <picklist>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MailChimp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LinkedIn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YouTube</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vimeo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Socialmedia__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Socialmedia</label>
        <referenceTo>socialmedia_settings__c</referenceTo>
        <relationshipName>OAuth_services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ad_id__c</fullName>
        <inlineHelpText>This is the id of Ad, Ad set or Campian to watch, used in Facebook, MailChimp, Google</inlineHelpText>
        <label>Ad/Ad set ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Socialmedia connection</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Socialmedia connections</pluralLabel>
    <recordTypes>
        <fullName>OAuth1</fullName>
        <active>true</active>
        <description>OAuth 1.0 Service</description>
        <label>OAuth 1.0</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>